test/Fail/Issue3517.agda
-- Reported by nad 2018-01-23
{-# OPTIONS --sized-types #-}

module Issue3517 where

import Issue3517.S
import Issue3517.M
